#139995 - fixed required validation on copy

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
@@ -179,6 +179,7 @@
                     getDepartmentsUrl: '@Url.Action("GetDepartments", "Ajax", new {area = ""})',
                     validateMacAddressUrl: '@Url.Action("ValidateMacAddress", "Workstation")',
                     validateTheftMarkUrl: '@Url.Action("ValidateTheftmark", "Workstation")',
+                    copyUrl: '@Url.Action("Copy", "Workstation")',
                     fieldsIds: {
                         'MacAddressId':
                             '@Html.IdFor(m => m.ComputerViewModel.CommunicationFieldsViewModel.CommunicationFieldsModel.MacAddress.Value)',
