#155555 - Bug - Case - Attachments by Clip button gives error when trying to open the file, type and id was incorrect in clip link

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_LogNoteFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_LogNoteFiles.cshtml
@@ -67,10 +67,19 @@
                         if (Model.CaseFiles.VirtualDirectory)
                         {
                             //Changed this
+                            var type = 0;
+                            if (l.LogType == LogFileType.Internal)
+                            {
+                                type = (int)CaseFileType.LogInternal;
+                            }
+                            else
+                            {
+                                type = (int)CaseFileType.LogExternal;
+                            }
                             @*<a target="_blank" class="isExisted"
                                onclick="window.dhHelpdesk.logFileAccess(@currentLog.CaseId, '@l.FileName', @(l.LogType == LogFileType.Internal ? (int)CaseFileType.LogInternal : (int)CaseFileType.LogExternal), @l.LogId.Value)"
                                href="@BuildLogFileLinkVD(l.LogId.Value, l.FileName, l.ParentLogType ?? l.LogType)"><i class="icon- attachedFile"></i> @l.FileName</a>*@
-                            <a target="_blank" href="@Url.Action("Documents", "Cases",new RouteValueDictionary { { "id", currentLog.CaseId }, { "fileName", l.FileName }, { "type",  (int)(l.ParentLogType ?? l.LogType) } , {"logId", currentLog.Id } })"
+                            <a target="_blank" href="@Url.Action("Documents", "Cases",new RouteValueDictionary { { "id", currentLog.CaseId }, { "fileName", l.FileName }, { "type",  type } , {"logId", l.LogId } })"
                                data-toggle="tooltip" rel="tooltip" data-placement="top" title="@(GetLogTypeText(l))">
                                 <i class="icon- attachedFile"></i> @l.FileName
                             </a>
